# neural-swipe-typing

./: README.md  pyproject.toml
configs/: config_evaluation.json  experiment_colors.json  predict_from_train.yaml  predict_standalone_example.yaml  report_experiment_names.json  train.yaml  train_google_2015.json
configs/decoder/: transformer_v1.json
configs/encoder/: conformer.json  conformer.yaml  transformer_v1.yaml
configs/experiment/: google_2015.yaml  indiswipe.yaml  nearest_only.yaml  traj_and_nearest.yaml  traj_and_nearest_conformer.yaml  traj_and_nearest_wd_2.yaml  traj_and_trainable_weighted.yaml  traj_and_trainable_weighted_v2.yaml  traj_and_weighted.yaml
configs/feature_extractor/: google_2015.yaml  indiswipe.yaml  nearest_key.yaml  traj.json  traj.yaml  traj_and_nearest.yaml  traj_and_weights_v1.yaml
configs/prediction/: prediction_conf__google_2015.json  prediction_conf__indiswipe.json  prediction_conf__nearest.json  prediction_conf__traj_and_nearest.json  prediction_conf__traj_and_nearest__conformer.json  prediction_conf__traj_and_trainable_weighted.json  prediction_conf__traj_and_trainable_weighted_v2.json  prediction_conf__traj_and_weighted.json
docs_and_assets/: Refactoring_plan.md
src/: dataset.py  evaluate.py  executorch_export.py  generate_results_table.py  model.py  model_with_feature_extractor.py  ns_tokenizers.py  pl_module.py  plot_metrics.py  plot_tb_metrics.py  predict.py  predict_all_epochs.py  torch_serialized_list.py  train.py  train_for_kaggle.ipynb  train_utils.py  word_generation_demo.ipynb  word_generators.py
(+41 files in other folders)
