[project]
name = "neural-swipe-typing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core ML
    "torch>=2.10.0",
    "torchaudio>=2.10.0",    # Conformer support

    # Configuration
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",

    # Logging & monitoring
    "tensorboard>=2.20.0",
    "tqdm>=4.67.3",

    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "matplotlib>=3.10.8",
    "tabulate>=0.9.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[project.optional-dependencies]
notebook = [
    "notebook>=7.1.3",
]
training = [
    "lightning>=2.6.1",
    "torchmetrics>=1.8.2",
]
data-obtaining = [
    "gdown>=5.2.1",
    "requests>=2.32.5",
]
exporting = [
    "executorch==1.1.0",
]
